--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "sitemap": "vue-cli-service sitemap"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "esm": "^3.2.25",
+    "sitemap-webpack-plugin": "^1.1.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -25,6 +28,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-cli-plugin-sitemap": "~2.3.0"
   }
 }
